--- a/views/layouts/dashboard.pug
+++ b/views/layouts/dashboard.pug
@@ -5,9 +5,12 @@ html(lang='en')
         meta(http-equiv='X-UA-Compatible', content='IE=edge')
         meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
         link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous")
-    body
+    body(style="background-color:rgb(83, 81, 92);")
         
         include includes/topnav.pug
         
         div 
             block content
+
+        script
+            include ../js/index.js
