--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -1,14 +1,13 @@
 extends ../layouts/dashboard.pug
 block content 
     h2(class="container") dashboard 
+
     if (msg)
         div(class="messages container")
             if (msg.error)
-                div(class="error")
-                #{msg.error}
+                div(class="alert alert-danger") #{ msg.error }
             if (msg.success)
-                div(class="success")
-                #{msg.success}
+                div(class="alert alert-success") #{msg.success}
     div(class="card ms-auto me-auto mt-5 pt-4 pb-5" style="max-width:1350px; min-width:768px;")
         div(class="card-body container")
             form(action="/customer/add" method="post" class="row")
