create ticket and discount page with forms

--- a/views/layouts/includes/topnav.pug
+++ b/views/layouts/includes/topnav.pug
@@ -1,4 +1,7 @@
 nav.sb-topnav.navbar.navbar-expand.navbar-dark.bg-dark
     // Navbar Brand
-    a.navbar-brand.ps-3(href='index.html')
+    a.navbar-brand.ps-3(href='/')
         | Start Bootstrap
+    
+    a.btn-primary(href="/discount") Znizki
+    a.btn-primary(href="/ticketTypes") karnety 
