--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -92,7 +92,7 @@ block content
                         div(class="col ps-0 pe-1")
                             input(type="text" class="form-control" id="statusEdit" placeholder="Status" name="status" data-customerEditValue)
 
-                        input(type="hidden" data-editCustomerId)
+                        input(type="hidden" data-editCustomerId name="customerId")
  
                         button(style="margin-left: 5px; width: 30px !important; height: 36px; border: none; padding: 0 !important;")
                             <svg style="padding: 0;" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="green" class="bi bi-pencil-square" viewBox="0 0 16 16">
