Edit customer ticket

--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -87,7 +87,7 @@ block content
                             input(type="text" class="form-control" id="codeEdit" placeholder="kod karnetu" name="code" data-customerEditValue)
 
                         div(class="col ps-0 pe-1")
-                            input(type="text" class="form-control" id="dataToEdit" placeholder="Koniec karnetu" name="dataTo" data-customerEditValue)
+                            input(type="date" class="form-control" id="dataToEdit" placeholder="Koniec karnetu" name="dataTo" data-customerEditValue)
                             
                         div(class="col ps-0 pe-1")
                             input(type="text" class="form-control" id="statusEdit" placeholder="Status" name="status" data-customerEditValue)
