Edit form to Discount, and ticket

--- a/views/layouts/dashboard.pug
+++ b/views/layouts/dashboard.pug
@@ -14,3 +14,7 @@ html(lang='en')
 
         script
             include ../js/index.js
+        script 
+            include ../js/discount.js
+        script 
+            include ../js/ticketType.js
